--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="/manifest.json" />
   <meta name="theme-color" content="#6366f1" />
-  <title>Routine Tracker</title>
+  <title>Habbita</title>
 </head>
 
 <body>
